Editor: avoid textarea height jumpiness when toggling Raw mode

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -1687,7 +1687,6 @@ div.translate-translation.raw textarea.translation
     unicode-bidi: bidi-override;
     font-family: "Raw", Consolas, "Ubuntu Mono", "Lucida Console", monospace;
     font-feature-settings: "isol" off, "init" off, "medi" off, "fina" off;
-    line-height: 115%;
 }
 
 /* Special handling for languages with big fonts */
